--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body {
     font-family: monospace;
+    text-align: center;
+}
+
+.error {
+    color: red;
+}
+
+.no-bullets {
+    list-style: none;
+}
+
+.no-bullets li {
+    margin-bottom: 1em;
 }
